--- a/convert_model.ipynb
+++ b/convert_model.ipynb
@@ -95,12 +95,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "66dfb7182981ecd9ebf2f5930af32126a2a6f0db9bde609e6b11b1e02afad2d7"
+    "hash": "dc84ef55cfd6504e5eae45315907b9defce54cc16c50e66b05850673bb3e3f06"
    }
   }
  },
